# plan-z

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  readme.md
examples/: hosts.yaml
examples/jobs/: cross-platform-backup.yaml  docker-etl-job.yaml  etl-hourly.yaml  health-check.yaml  multi-host-deploy.yaml  nightly-backup.yaml  windows-cleanup.yaml
src/planz/: __init__.py  __main__.py  cli.py  cron_controller.py  executor.py  job_manager.py  models.py
src/planz/remote/: __init__.py  base.py  local.py  ssh.py
src/planz/scheduler/: __init__.py  base.py  cron.py  docker.py  windows.py
tests/: __init__.py  test_cli.py  test_executor.py  test_job_manager.py  test_models.py  test_scheduler.py
